--- a/config/templates/defaults.yaml
+++ b/config/templates/defaults.yaml
@@ -11,12 +11,11 @@ crd:
         {"apiVersion": "ibmcloud.ibm.com/v1alpha1",
             "kind": "Service",
             "metadata": {
-            "name": "myeventstreams"
+            "name": "mytranslator"
             },
             "spec": {
-            "serviceClass": "messagehub",
-            "plan": "standard",
-            "externalName": "myeventstreams"
+            "serviceClass": "language-translator",
+            "plan": "lite"
             }
         }
     - kind: Binding
@@ -25,10 +24,10 @@ crd:
         {"apiVersion": "ibmcloud.ibm.com/v1alpha1",
             "kind": "Binding",
             "metadata": {
-            "name": "myeventstreams-binding"
+            "name": "mytranslator-binding"
             },
             "spec": {
-            "serviceName": "myeventstreams"
+            "serviceName": "mytranslator"
             }
         }
   
