Bucket (for IBM Cloud Storage) creation (#51)
* Add Bucket and Token Controller

* Update bucket_controller.go

* Use Annotation to keep system data

* Update bucket_controller.go

* update Bucket

* Update rbac_role.yaml

* Update .gitignore

* Update .gitignore

* Update Bucket Creation when name is not available

* for OpenShift

* merged

* Add Health Check

* Update bucket_controller.go

Display bucket name in Message

* Update bucket_controller.go

* Update bucket_controller.go

* Allow apply to change CORSRule

* Update Bucket

* Add Readme file for Bucket

* Update bucket_controller.go

--- a/config/rbac/manager_role.yaml
+++ b/config/rbac/manager_role.yaml
@@ -101,6 +101,42 @@ rules:
   - patch
   - delete
 - apiGroups:
+  - ibmcloud.ibm.com
+  resources:
+  - buckets
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
+- apiGroups:
+  - ibmcloud.ibm.com
+  resources:
+  - buckets/status
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
+- apiGroups:
+  - ibmcloud.ibm.com
+  resources:
+  - buckets/finalizers
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
+- apiGroups:
   - apps
   resources:
   - deployments
