--- a/config/default/manager_image_patch.yaml
+++ b/config/default/manager_image_patch.yaml
@@ -8,5 +8,5 @@ spec:
     spec:
       containers:
       # Change the value of image field below to your controller image URL
-      - image: cloudoperators/ibmcloud-operator:e2e-test
+      - image: cloudoperators/ibmcloud-operator:0.1.0
         name: manager
