--- a/config/samples/translator.yaml
+++ b/config/samples/translator.yaml
@@ -2,6 +2,7 @@ apiVersion: ibmcloud.ibm.com/v1alpha1
 kind: Service
 metadata:
   name: mytranslator
+  namespace: default
 spec:
   plan: lite
   serviceClass: language-translator
