feat: add control for service self-healing

--- a/config/samples/translator.yaml
+++ b/config/samples/translator.yaml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: mytranslator
   namespace: default
+  annotations:
+    ibmcloud.ibm.com/self-healing: enabled
 spec:
   plan: lite
   serviceClass: language-translator
