add support for existing services (#19)
* Support 'Alias' plan for service: CF service type

* feat: add support for existing services

* Handle Alias for single service when serviceID annotation is provided

* Do not fail but give a warning when self healing used with Alias plan

* use different plan for testing

* fix e2e test script

--- a/config/samples/translator-bindonly.yaml
+++ b/config/samples/translator-bindonly.yaml
@@ -1,7 +1,8 @@
 apiVersion: ibmcloud.ibm.com/v1alpha1
 kind: Service
 metadata:
-  name: test-translator-1
+  name: mytranslator
+  namespace: default
 spec:
-  plan: standard
+  plan: Alias
   serviceClass: language-translator
