fixes to namespaces

--- a/config/crds/ibmcloud_v1alpha1_binding.yaml
+++ b/config/crds/ibmcloud_v1alpha1_binding.yaml
@@ -43,6 +43,8 @@ spec:
               type: string
             serviceName:
               type: string
+            serviceNamespace:
+              type: string
           required:
           - serviceName
           type: object
