--- a/config/samples/translator-binding.yaml
+++ b/config/samples/translator-binding.yaml
@@ -2,6 +2,8 @@ apiVersion: ibmcloud.ibm.com/v1alpha1
 kind: Binding
 metadata:
   name: binding-translator
+  namespace: name2
 spec:
   serviceName: mytranslator
+  serviceNamespace: name1
   secretName: translator-secret
