--- a/config/samples/translator.yaml
+++ b/config/samples/translator.yaml
@@ -2,7 +2,7 @@ apiVersion: ibmcloud.ibm.com/v1alpha1
 kind: Service
 metadata:
   name: mytranslator
-  namespace: default
+  namespace: name1
   annotations:
     ibmcloud.ibm.com/self-healing: enabled
 spec:
