--- a/config/samples/translator-binding-with-ns.yaml
+++ b/config/samples/translator-binding-with-ns.yaml
@@ -2,6 +2,8 @@ apiVersion: ibmcloud.ibm.com/v1alpha1
 kind: Binding
 metadata:
   name: binding-translator
+  namespace: ns
 spec:
   serviceName: mytranslator
+  serviceNamespace: default
   secretName: translator-secret
