CRD change to remove required, new version

--- a/config/samples/cos.yaml
+++ b/config/samples/cos.yaml
@@ -3,8 +3,10 @@ kind: Service
 metadata:
   name: mycos
 spec:
-  plan: lite
+  plan: standard
   serviceClass: cloud-object-storage
+  context:
+    region: global
 ---
 apiVersion: ibmcloud.ibm.com/v1alpha1
 kind: Binding
