--- a/releases/v0.1.1/001_ibmcloud_v1alpha1_binding.yaml
+++ b/releases/v0.1.1/001_ibmcloud_v1alpha1_binding.yaml
@@ -4,7 +4,7 @@ metadata:
   creationTimestamp: null
   labels:
     controller-tools.k8s.io: "1.0"
-  name: services.ibmcloud.ibm.com
+  name: bindings.ibmcloud.ibm.com
 spec:
   additionalPrinterColumns:
   - JSONPath: .status.state
@@ -15,8 +15,8 @@ spec:
     type: date
   group: ibmcloud.ibm.com
   names:
-    kind: Service
-    plural: services
+    kind: Binding
+    plural: bindings
   scope: Namespaced
   subresources:
     status: {}
@@ -37,70 +37,30 @@ spec:
           type: object
         spec:
           properties:
-            context:
-              description: Parameters []keyvaluev1.KeyValue `json:"parameters,omitempty"`
-              properties:
-                org:
-                  type: string
-                region:
-                  type: string
-                resourcegroup:
-                  type: string
-                resourcelocation:
-                  type: string
-                space:
-                  type: string
-              type: object
-            externalName:
+            role:
               type: string
-            plan:
+            secretName:
               type: string
-            serviceClass:
+            serviceName:
               type: string
-            serviceClassType:
+            serviceNamespace:
               type: string
           required:
-          - serviceClass
-          - plan
+          - serviceName
           type: object
         status:
           properties:
-            binding:
-              type: string
-            context:
-              properties:
-                org:
-                  type: string
-                region:
-                  type: string
-                resourcegroup:
-                  type: string
-                resourcelocation:
-                  type: string
-                space:
-                  type: string
-              type: object
-            externalName:
-              type: string
             generation:
               format: int64
               type: integer
             instanceId:
               type: string
+            keyInstanceId:
+              type: string
             message:
-              type: string
-            plan:
-              type: string
-            serviceClass:
-              type: string
-            serviceClassType:
               type: string
             state:
               type: string
-          required:
-          - serviceClass
-          - serviceClassType
-          - plan
           type: object
   version: v1alpha1
 status:
