--- a/config/samples/elastic.yaml
+++ b/config/samples/elastic.yaml
@@ -5,6 +5,8 @@ metadata:
 spec:
   plan: standard
   serviceClass: databases-for-elasticsearch
+  parameters:
+  - members_disk_allocation_mb: 30720
 ---
 apiVersion: ibmcloud.ibm.com/v1alpha1
 kind: Binding
