--- a/config/crds/ibmcloud_v1alpha1_service.yaml
+++ b/config/crds/ibmcloud_v1alpha1_service.yaml
@@ -38,7 +38,6 @@ spec:
         spec:
           properties:
             context:
-              description: Parameters []keyvaluev1.KeyValue `json:"parameters,omitempty"`
               properties:
                 org:
                   type: string
@@ -59,6 +58,34 @@ spec:
               type: object
             externalName:
               type: string
+            parameters:
+              items:
+                properties:
+                  attributes:
+                    description: A parameter may have attributes (e.g. message hub
+                      topic might have partitions)
+                    type: object
+                  name:
+                    description: Name representing the key.
+                    type: string
+                  value:
+                    description: Defaults to null.
+
+                  valueFrom:
+                    description: Source for the value. Cannot be used if value is
+                      not empty.
+                    properties:
+                      configMapKeyRef:
+                        description: Selects a key of a ConfigMap.
+                        type: object
+                      secretKeyRef:
+                        description: Selects a key of a secret in the resource namespace
+                        type: object
+                    type: object
+                required:
+                - name
+                type: object
+              type: array
             plan:
               type: string
             serviceClass:
