--- a/olm/v0.1.0/ibmcloud_operator_v1alpha1_binding.crd.yaml
+++ b/olm/v0.1.0/ibmcloud_operator_v1alpha1_binding.crd.yaml
@@ -43,6 +43,8 @@ spec:
               type: string
             serviceName:
               type: string
+            serviceNamespace:
+              type: string
           required:
           - serviceName
           type: object
