--- a/releases/v0.1.0/001_ibmcloud_v1alpha1_binding.yaml
+++ b/releases/v0.1.0/001_ibmcloud_v1alpha1_binding.yaml
@@ -43,6 +43,8 @@ spec:
               type: string
             serviceName:
               type: string
+            serviceNamespace:
+              type: string
           required:
           - serviceName
           type: object
