--- a/config/samples/apiconnect.yaml
+++ b/config/samples/apiconnect.yaml
@@ -3,6 +3,6 @@ kind: Service
 metadata:
   name: myapiconnect
 spec:
-  plan: Alias
+  plan: Lite
   serviceClass: APIConnect
   serviceClassType: CF
