--- a/olm/v0.1.1/ibmcloud_operator.v0.1.1.clusterserviceversion.yaml
+++ b/olm/v0.1.1/ibmcloud_operator.v0.1.1.clusterserviceversion.yaml
@@ -8,7 +8,7 @@ metadata:
     categories: Cloud Provider
     certified: 'false'
     containerImage: cloudoperators/ibmcloud-operator:0.1.1
-    createdAt: '2019-09-19T15:17:41Z'
+    createdAt: '2019-09-20T17:11:40Z'
     description: The IBM Cloud Operator provides a Kubernetes CRD-Based API to manage
       the lifecycle of IBM public cloud services.
     repository: https://github.com/IBM/cloud-operators
@@ -98,6 +98,11 @@ spec:
       - description: Name of the service resource to bind
         displayName: Service Name
         path: serviceName
+        x-descriptors:
+        - urn:alm:descriptor:text
+      - description: Name of the secret where credentials will be stored
+        displayName: Secret Name
+        path: secretName
         x-descriptors:
         - urn:alm:descriptor:text
       statusDescriptors:
