--- a/config/templates/template.clusterserviceversion.yaml
+++ b/config/templates/template.clusterserviceversion.yaml
@@ -48,9 +48,13 @@ spec:
         ibmcloud login
     
     and set a default target environment for your resources with the command:
-   
-        ibmcloud target --cf
-      
+
+        ibmcloud target --cf -g default
+
+    This will use the IBM Cloud resource group `default`. To specify a different resource group, use the following command:
+ 
+        ibmcloud target -g <resource-group>
+ 
     you can then configure the operator running the following script:
 
         curl -sL https://raw.githubusercontent.com/IBM/cloud-operators/master/hack/config-operator.sh | bash 
