--- a/olm/v0.1.2/ibmcloud_operator.v0.1.0.clusterserviceversion.yaml
+++ b/olm/v0.1.2/ibmcloud_operator.v0.1.0.clusterserviceversion.yaml
@@ -7,13 +7,13 @@ metadata:
     capabilities: Basic Install
     categories: Cloud Provider
     certified: 'false'
-    containerImage: cloudoperators/ibmcloud-operator:0.1.2
-    createdAt: '2019-10-03T11:41:32Z'
+    containerImage: cloudoperators/ibmcloud-operator:0.1.0
+    createdAt: '2019-06-28T11:56:22Z'
     description: The IBM Cloud Operator provides a Kubernetes CRD-Based API to manage
       the lifecycle of IBM public cloud services.
     repository: https://github.com/IBM/cloud-operators
     support: IBM
-  name: ibmcloud-operator.v0.1.2
+  name: ibmcloud-operator.v0.1.0
   namespace: placeholder
 spec:
   customresourcedefinitions:
@@ -100,11 +100,6 @@ spec:
         path: serviceName
         x-descriptors:
         - urn:alm:descriptor:text
-      - description: Name of the secret where credentials will be stored
-        displayName: Secret Name
-        path: secretName
-        x-descriptors:
-        - urn:alm:descriptor:text
       statusDescriptors:
       - description: Detailed message on current status
         displayName: Message
@@ -134,10 +129,8 @@ spec:
     \   already configured to access your cluster. Before installing the operator,\
     \ you need to login to  your IBM cloud account with the IBM Cloud CLI:\n\n   \
     \ ibmcloud login\n\nand set a default target environment for your resources with\
-    \ the command:\n\n    ibmcloud target --cf -g default\n\nThis will use the IBM\
-    \ Cloud resource group `default`. To specify a different resource group, use the\
-    \ following command:\n\n    ibmcloud target -g <resource-group>\n\nyou can then\
-    \ configure the operator running the following script:\n\n    curl -sL https://raw.githubusercontent.com/IBM/cloud-operators/master/hack/config-operator.sh\
+    \ the command:\n\n    ibmcloud target --cf\n  \nyou can then configure the operator\
+    \ running the following script:\n\n    curl -sL https://raw.githubusercontent.com/IBM/cloud-operators/master/hack/config-operator.sh\
     \ | bash \n\nThe script above creates an IBM Cloud API Key and stores it in a\
     \ Kubernetes secret that can be accessed by the operator, and it sets defaults\
     \ such as the resource group and region  used to provision IBM Cloud Services.\
@@ -338,7 +331,7 @@ spec:
                 - -v=5
                 command:
                 - ./manager
-                image: cloudoperators/ibmcloud-operator:0.1.2
+                image: cloudoperators/ibmcloud-operator:0.1.0
                 imagePullPolicy: Always
                 name: ibmcloud-controllers
               serviceAccountName: ibmcloud-operator
@@ -374,8 +367,7 @@ spec:
   maturity: alpha
   provider:
     name: IBM
-  replaces: ibmcloud-operator.v0.1.1
   selector:
     matchLabels:
       name: ibmcloud-operator
-  version: 0.1.2
+  version: 0.1.0
