updates for integration with service-binding-operator

--- a/config/crds/ibmcloud_v1alpha1_binding.yaml
+++ b/config/crds/ibmcloud_v1alpha1_binding.yaml
@@ -87,6 +87,8 @@ spec:
               type: string
             message:
               type: string
+            secretName:
+              type: string
             state:
               type: string
           type: object
