--- a/olm/v0.1.2/ibmcloud_operator_v1alpha1_binding.crd.yaml
+++ b/olm/v0.1.2/ibmcloud_operator_v1alpha1_binding.crd.yaml
@@ -87,6 +87,8 @@ spec:
               type: string
             message:
               type: string
+            secretName:
+              type: string
             state:
               type: string
           type: object
