--- a/releases/v0.1.2/001_ibmcloud_v1alpha1_binding.yaml
+++ b/releases/v0.1.2/001_ibmcloud_v1alpha1_binding.yaml
@@ -87,6 +87,8 @@ spec:
               type: string
             message:
               type: string
+            secretName:
+              type: string
             state:
               type: string
           type: object
