Adds support for 'tags' on Service definitions
Signed-off-by: Sean Sundberg <seansund@us.ibm.com>

--- a/config/crds/ibmcloud_v1alpha1_service.yaml
+++ b/config/crds/ibmcloud_v1alpha1_service.yaml
@@ -80,6 +80,10 @@ spec:
                 - name
                 type: object
               type: array
+            tags:
+              items:
+                type: string
+              type: array
             plan:
               type: string
             serviceClass:
