Changes for Binding types
Signed-off-by: Mandana Vaziri <mvaziri@us.ibm.com>

--- a/config/crds/ibmcloud_v1alpha1_binding.yaml
+++ b/config/crds/ibmcloud_v1alpha1_binding.yaml
@@ -37,6 +37,8 @@ spec:
           type: object
         spec:
           properties:
+            alias:
+              type: string
             parameters:
               items:
                 properties:
