fixes for build system
Signed-off-by: Mandana Vaziri <mvaziri@us.ibm.com>

--- a/pkg/controller/service/testdata/translator-alias.yaml
+++ b/pkg/controller/service/testdata/translator-alias.yaml
@@ -6,4 +6,4 @@ metadata:
 spec:
   plan: Alias
   serviceClass: language-translator
-  externalName: test-translator-1
+  externalName: test-translator
