--- a/test/e2e/service-translator.yaml
+++ b/test/e2e/service-translator.yaml
@@ -1,7 +1,7 @@
 apiVersion: ibmcloud.ibm.com/v1alpha1
 kind: Service
 metadata:
-  name: test-translator-1
+  name: test-translator-e2e
 spec:
   plan: standard
   serviceClass: language-translator
